# SK-agent-Parctice

./: .gitignore  AGENTS.md  README.md  agent_structure_overview_ko.md  agentic_ai_poc_report_ko.md  architecture_overview_ko.md  architecture_progress_checklist_ko.md  memory.md  pyproject.toml  skbiopharm_agentic_ai_poc_implementation_plan_ko.md
app/: __init__.py
app/agents/: AGENTS.md  __init__.py  answer_composer.py  ceo_synthesizer.py  citation_validator.py  harvey_agent.py  house_agent.py  parallel_executor.py  pubmed_query_agent.py  registry.py  review_policy.py  router_agent.py  walter_agent.py
app/api/: dependencies.py  errors.py  main.py  schemas.py  settings.py  stubs.py
app/clients/: AGENTS.md  __init__.py  chembl.py  clinicaltrials.py  (+5 more)
tests/: AGENTS.md  test_agent_registry.py  test_answer_composer.py  test_api_dependencies.py  test_api_errors.py  test_api_runtime.py  test_api_settings.py  test_ceo_synthesizer.py  test_chembl_client.py  test_citation_validator.py  test_clinicaltrials_client.py  test_compound_preprocessor.py  test_consult_api.py  test_consult_workflow.py  test_domain_models.py  test_evidence_coordinator.py  test_executive_api.py  test_executive_workflow.py  test_harvey_agent.py  test_house_agent.py  test_openfda_client.py  test_parallel_executor.py  test_pubchem_client.py  test_pubmed_client.py  test_pubmed_query_agent.py  test_review_policy.py  test_router_agent.py  test_txgemma_client.py  test_txgemma_registry.py  test_ui_client.py  test_ui_main.py  test_ui_presenters.py  test_ui_runtime.py  test_ui_theme.py  test_walter_agent.py
(+15 files in other folders)
