[project]
name = "agentic-ai-poc"
version = "0.1.0"
description = "PubMed evidence pipeline for an agentic drug discovery PoC"
requires-python = ">=3.11"
dependencies = [
  "boto3",
  "fastapi",
  "httpx",
  "langchain-aws",
  "langchain-core",
  "langgraph",
  "pydantic",
  "rdkit",
  "streamlit",
  "uvicorn",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "bedrock_live: opt-in tests that require real Bedrock credentials and model access",
  "sagemaker_live: opt-in tests that require real SageMaker credentials and endpoint access",
]
